apps/home-automation/esphome/overlays/homelab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: esphome
  labels:
    pod-security.kubernetes.io/enforce: "privileged"
    pod-security.kubernetes.io/enforce-version: "latest"
