apps/home-automation/esphome/overlays/homelab/hostnetwork-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
  namespace: esphome
spec:
  template:
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
